--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
-  "name": "editor",
+  "name": "eventbug",
   "version": "0.1.0",
   "private": true,
-  "homepage" : "http://www.baharev.info/sandbox/eventbug",
+  "homepage": "http://www.baharev.info/sandbox/eventbug",
   "dependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
-    "react-sound": "^0.8.0",
-    "react-transition-group": "^2.2.1",
-    "redux": "^3.7.2",
-    "redux-undo": "^1.0.0-beta9-9-7",
-    "serve": "^6.4.1"
+    "redux": "^3.7.2"
   },
   "devDependencies": {
     "react-scripts": "1.0.14"
